[package]
name = "food_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"]}
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0"
chrono = "0.4.35"
jsonwebtoken = "9"
serde_json = "1.0.114"
tower = "0.4.13"
